--- a/LendGames.Web.MvcApp/Content/Site.css
+++ b/LendGames.Web.MvcApp/Content/Site.css
@@ -16,9 +16,13 @@
     white-space: normal;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
+.loading-box {
+    width: 130px;
+    height: 130px;
+    margin: 30px auto 30px;
+    border-radius: 100%;
+    background-size: cover;
+    background-image: url('/Assets/Spinner.gif');
+    background-position: center;
+    border-radius: 15%;
 }
