--- a/LendGames.Web.MvcApp/Views/Home/Index.cshtml
+++ b/LendGames.Web.MvcApp/Views/Home/Index.cshtml
@@ -1,9 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-}
-
-<div class="container">
+﻿<div class="container">
     <div class="col-lg-4 col-lg-offset-4">
         <form id="connectForm" action="/Account/Connect" method="post">
             <div class="panel panel-default">
