implementação do Dashboard

--- a/LendGames.Web.MvcApp/Views/Home/Index.cshtml
+++ b/LendGames.Web.MvcApp/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="panel panel-default">
                 <div class="panel-body">
-                    <button id="connectButton" type="submit" class="btn btn-success"><span>Conectar</span> <i class="fa fa-refresh fa-spin fa-fw hidden"></i></button>
+                    <button id="connectButton" type="submit" style="width: 100%;" class="btn btn-lg btn-success"><span>Conectar</span> <i class="fa fa-refresh fa-spin fa-fw hidden"></i></button>
                 </div>
             </div>
         </form>
