--- a/LendGames.Web.MvcApp/Views/Account/Dashboard.cshtml
+++ b/LendGames.Web.MvcApp/Views/Account/Dashboard.cshtml
@@ -2,4 +2,8 @@
     ViewBag.Title = "Dashboard";
 }
 
-<h2>Bem-vindo ao Lend Games</h2>
+<div id="DashboardInfoHolder"></div>
+
+@section Scripts {
+    <script src="~/Scripts/home/dashboard.js"></script>
+}
