finalizado CRUD de contas

--- a/LendGames.Web.MvcApp/App_Code/NavbarHelper.cshtml
+++ b/LendGames.Web.MvcApp/App_Code/NavbarHelper.cshtml
@@ -54,7 +54,7 @@
                                 <ul class="dropdown-menu">
                                     @if (connectedAccount.Type == LendGames.Database.Models.AccountType.Administrator)
                                     {
-                                        <li><a href="/Account">Usuários</a></li>
+                                        <li><a href="/Account">Contas</a></li>
                                     }
                                     <li><a href="/Account/ChangePassword"> Alterar Senha</a></li>
                                     <li><a href="/Account/Disconnect">Desconectar</a></li>
