--- a/LendGames.Web.MvcApp/Views/Game/_GamesList.cshtml
+++ b/LendGames.Web.MvcApp/Views/Game/_GamesList.cshtml
@@ -16,7 +16,7 @@
             <thead>
                 <tr>
                     <th>@Html.DisplayNameFor(model => model.Title)</th>
-                    <th>@Html.DisplayNameFor(model => model.IsLended)</th>
+                    <th class="text-center">@Html.DisplayNameFor(model => model.IsLended)</th>
                     <th></th>
                 </tr>
             </thead>
@@ -29,7 +29,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Title)
                         </td>
-                        <td>
+                        <td class="text-center">
                             @BoolToStringComponent.Build(item.IsLended)
                         </td>
                         <td>
@@ -51,7 +51,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td colspan="4">
+                    <td colspan="3">
                         <div class="pull-right">
                             <ul class="pagination">
                                 @Html.PageLinks( //Montagem da paginação com chamada no método JavaScript
