--- a/LendGames.Web.MvcApp/Views/Game/_GamesList.cshtml
+++ b/LendGames.Web.MvcApp/Views/Game/_GamesList.cshtml
@@ -1,69 +1,51 @@
 ﻿@model IEnumerable<LendGames.Web.MvcApp.ViewModels.GameViewModel>
 @using LendGames.Utils.Paging
 
-<div class="panel panel-default">
-    @if (!Model.Any())
-    {
+@if (!Model.Any())
+{
+    <div class="panel panel-default">
+
         <div class="panel-body">
-            <h4 class="text-center" >Não há nenhum jogo cadastrado ainda :(</h4>
+            <h4 class="text-center">Não há nenhum jogo cadastrado ainda :(</h4>
         </div>
-    }
-    else
-    {
 
+    </div>
+}
+else
+{
+    <div class="row">
+        @foreach (var game in Model)
+        {
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="thumbnail">
+                    <img style="height: 300px; width: 100%; display: block;" src="/Game/RenderCover/@game.Id" alt="@game.Title">
+                    <div class="caption">
+                        <h4>@game.Title</h4>        
+                        @if (game.IsLended)
+                        {
+                            <p><span class="label label-danger">Emprestado Para @game.LendedFor</span></p>
+                        }
+                        else
+                        {
+                            <p><span class="label label-success">Disponível</span></p>
+                        }
+                        <p>
+                            <a href="/Game/Edit/@game.Id" class="btn btn-sm btn-default" role="button">Editar</a> 
+                            @if (!game.IsLended)
+                            {
+                                <a href="/Game/Remove/@game.Id" class="btn btn-sm btn-warning" role="button">Emprestar</a>
+                            }
+                            else
+                            {
+                                <a href="/Game/Remove/@game.Id" class="btn btn-sm btn-success" role="button">Devolver</a>
+                            }
+                            <a href="/Game/Remove/@game.Id" class="btn btn-sm btn-danger" role="button">Remover</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
+}
 
-        <table class="table table-hover table-striped">
-            <thead>
-                <tr>
-                    <th>@Html.DisplayNameFor(model => model.Title)</th>
-                    <th class="text-center">@Html.DisplayNameFor(model => model.IsLended)</th>
-                    <th></th>
-                </tr>
-            </thead>
-
-            <tbody>
-
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Title)
-                        </td>
-                        <td class="text-center">
-                            @BoolToStringComponent.Build(item.IsLended)
-                        </td>
-                        <td>
-                            <div>
-                                <div class="btn-group pull-right">
-                                    <a class="btn btn-default btn-sm" href="/Game/Edit/@item.Id"><i class="glyphicon glyphicon-pencil"></i> Editar</a>
-                                    <button class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="/Game/Remove/@item.Id"><i class="glyphicon glyphicon-trash"></i> Remover</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                }
-
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3">
-                        <div class="pull-right">
-                            <ul class="pagination">
-                                @Html.PageLinks( //Montagem da paginação com chamada no método JavaScript
-                                     ViewBag.PagingData as PagingData,
-                                     p => Url.Action("GamesList", "Game", new { page = p }),
-                                     p => "return loadGamesList(" + p + ");"
-                                 )
-                            </ul>
-                        </div>
-                    </td>
-                </tr>
-            </tfoot>
-        </table>
-    }
-</div>
+<br />
