--- a/LendGames.Web.MvcApp/Views/Shared/_Layout.cshtml
+++ b/LendGames.Web.MvcApp/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - Empréstimo de Games</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://bootswatch.com/3/paper/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     @if (Session["ConnectedId"] == null)
