finalizado empréstimo e devolução de jogos

--- a/LendGames.Web.MvcApp/Views/Account/_DashboardInfo.cshtml
+++ b/LendGames.Web.MvcApp/Views/Account/_DashboardInfo.cshtml
@@ -35,7 +35,10 @@
         </div>                
     </div>
     <div class="panel-footer">
-        <a href="/Game/Edit" class="btn btn-sm btn-default">Novo Jogo</a>
+        <a href="/Game" class="btn btn-sm btn-primary">Catálogo de Jogos</a>
+        <a href="/Game/Edit" class="btn btn-sm btn-primary">Novo Jogo</a>
+
+        <a href="/Friend" class="btn btn-sm btn-default">Lista de Amigos</a>
         <a href="/Friend/Edit" class="btn btn-sm btn-default">Novo Amigo</a>
         @if (Model.LastConnection != null)
         {
